fixed the user activity call

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,12 +1,10 @@
 # Frontend Development Environment Variables
-VITE_APP_NAME=myapp
-VITE_BASE_PATH=/miniappsdev/myapp/
-VITE_API_BASE=/miniappsdev/myapp/api
-VITE_AUTH_TOKEN_URL=/miniappsdev/myapp/api/auth/token
+VITE_APP_NAME=irrcalc
+VITE_BASE_PATH=/miniappsdev/irrcalc/
+VITE_API_BASE=/miniappsdev/irrcalc/api
+VITE_AUTH_TOKEN_URL=http://localhost:8086/auth/token
 
-# UserActivity API - Mock API for development
-
-VITE_USER_ACTIVITY_API_BASE=http://localhost:3001
+# All data comes from backend - no direct external API calls
 
 # Debug
 VITE_DEBUG=true
