--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,13 +1,5 @@
-# Example Environment Variables
-# Copy this file to .env.local to override defaults
+# Frontend Environment Variables Example
 
-# App Configuration
-VITE_APP_NAME=irrcalc
+# App Configuration  
 VITE_BASE_PATH=/miniappsdev/irrcalc/
 VITE_API_BASE=/miniappsdev/irrcalc/api
-VITE_AUTH_TOKEN_URL=/miniappsdev/irrcalc/api/auth/token
-
-# All API calls go through backend - no direct external API configuration needed
-
-# Debug
-VITE_DEBUG=true
