make it more minimal

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,18 +8,9 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "declaration": false,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "sourceMap": true
+    "moduleResolution": "node"
   },
   "include": ["src/**/*"],
-  "exclude": ["dist", "node_modules", "**/*.test.ts", "**/*.spec.ts"],
-  "ts-node": {
-    "esm": false
-  }
+  "exclude": ["dist", "node_modules"]
 }
