--- a/package.json
+++ b/package.json
@@ -5,32 +5,23 @@
   "private": true,
   "workspaces": [
     "frontend",
-    "backend", 
+    "backend",
     "shared"
   ],
   "scripts": {
-    "dev": "npm run build:frontend:dev && npm run dev:backend",
-    "dev:watch": "npm run build:frontend && concurrently --kill-others-on-fail --kill-others \"npm run dev:backend\" \"npm run dev:frontend-watch\"",
-    "dev:frontend-watch": "cd frontend && npm run build:watch",
+    "dev": "npm run build:frontend && npm run dev:backend",
     "dev:backend": "cd backend && npm run dev",
     "build": "npm run build:shared && npm run build:frontend && npm run build:backend",
     "build:frontend": "cd frontend && npm run build",
-    "build:frontend:dev": "cd frontend && npm run build:dev",
     "build:backend": "cd backend && npm run build",
     "build:shared": "cd shared && npm run build",
     "start": "cd backend && npm start",
-    "test": "npm run test:frontend && npm run test:backend",
-    "test:frontend": "cd frontend && npm test",
-    "test:backend": "cd backend && npm test",
     "lint": "npm run lint:frontend && npm run lint:backend",
     "lint:frontend": "cd frontend && npm run lint",
     "lint:backend": "cd backend && npm run lint",
     "typecheck": "npm run typecheck:frontend && npm run typecheck:backend",
-    "typecheck:frontend": "cd frontend && npm run typecheck", 
+    "typecheck:frontend": "cd frontend && npm run typecheck",
     "typecheck:backend": "cd backend && npm run typecheck"
-  },
-  "devDependencies": {
-    "concurrently": "^8.2.2"
   },
   "engines": {
     "node": ">=18.0.0",
